# pachev_ftp

./: .gitignore  LICENSE  README.md
ftp_client/: .gitignore  Cargo.toml  rainy_test2.txt  sunny_test.txt
ftp_client/src/: client.rs  main.rs  utils.rs
ftp_client/tests/: sunny_test.txt  sunny_test2.txt
ftp_server/: .gitignore  Cargo.toml  users.cfg
ftp_server/ftproot/pachev/: .temp_ls27500  .temp_ls27501
ftp_server/src/: main.rs  main_commands.rs  server.rs  user.rs
project1/: fclient.cfg  ftp_client  ftp_server  readme.md
project1/conf/: fsys.cfg
project1/ftpserver/conf/: users.cfg
project1/tests/: rainy_test.txt  system_test.txt
source/ftp_client/: Readme.md
source/ftp_client/src/: utils.rs
source/ftp_client/tests/: rainy_test2.txt  sunny_test.txt
source/ftp_server/: .gitignore
source/ftp_server/src/: main_commands.rs  server.rs  tests.rs  user.rs
