[package]
name = "ftp_server"
version = "0.1.0"
description = "FTP Server implemented in Rust For CNT4713"
authors = ["Pachev Joseph <pachevjoseph@gmail.com>"]

[dependencies]
argparse = "0.2.1"
log="*"
slog="1.5.2"
slog-term="1.5.0"
slog-stream="1.2.0"
slog-stdlog="1.1.0"
rand = "0.3"
rust-ini = "0.9"
